Safe zone on mobile fix?

--- a/src/hub/Hub.css
+++ b/src/hub/Hub.css
@@ -57,6 +57,12 @@ body,
   background-color: var(--background-color-1);
 }
 
+body {
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
+  height: 100vh;
+}
+
 .container {
   margin: 0;
   display: flex;
